// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Image badge (extra small) 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 16px;
  min-height: 16px;
  width: 16px;
  height: 16px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div>
  <div
    className="c0"
    size={16}
    src="https://picsum.photos/512?image=0"
  />
</div>
`;

exports[`Storyshots Image badge (large) 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 56px;
  min-height: 56px;
  width: 56px;
  height: 56px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div>
  <div
    className="c0"
    size={56}
    src="https://picsum.photos/512?image=0"
  />
</div>
`;

exports[`Storyshots Image badge (medium) 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div>
  <div
    className="c0"
    size={40}
    src="https://picsum.photos/512?image=0"
  />
</div>
`;

exports[`Storyshots Image badge (small) 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div>
  <div
    className="c0"
    size={24}
    src="https://picsum.photos/512?image=0"
  />
</div>
`;

exports[`Storyshots Image badge 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 48px;
  min-height: 48px;
  width: 48px;
  height: 48px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div
  className="c0"
  size={48}
  src="https://picsum.photos/512?image=0"
/>
`;

exports[`Storyshots Image custom css 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 300px;
  min-height: 300px;
  width: 300px;
  height: 300px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
  opacity: 0.5;
  border: dotted 5px red;
}

<div
  className="c0"
  size={300}
  src="https://picsum.photos/512?image=0"
/>
`;

exports[`Storyshots Image custom dimensions and border 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 800px;
  min-height: 400px;
  width: 800px;
  height: 400px;
  overflow: hidden;
  border: solid 4px rgba(255,255,255,0.56);
  border-radius: 16px;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div
  className="c0"
  height="400px"
  size={48}
  src="https://picsum.photos/512?image=0"
  width="800px"
/>
`;

exports[`Storyshots Image default 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 48px;
  min-height: 48px;
  width: 48px;
  height: 48px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div
  className="c0"
  size={48}
  src="https://picsum.photos/512?image=0"
/>
`;

exports[`Storyshots Image fit (contain) 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 48px;
  min-height: 48px;
  width: 48px;
  height: 48px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: contain;
  background-position: center;
}

<div>
  <div
    className="c0"
    size={48}
    src="https://picsum.photos/512?image=0"
  />
</div>
`;

exports[`Storyshots Image fit (cover) 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 48px;
  min-height: 48px;
  width: 48px;
  height: 48px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div>
  <div
    className="c0"
    size={48}
    src="https://picsum.photos/512?image=0"
  />
</div>
`;

exports[`Storyshots Image thumbnail (extra large) 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 120px;
  min-height: 120px;
  width: 120px;
  height: 120px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div>
  <div
    className="c0"
    size={120}
    src="https://picsum.photos/512?image=0"
  />
</div>
`;

exports[`Storyshots Image thumbnail (huge) 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 240px;
  min-height: 240px;
  width: 240px;
  height: 240px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div>
  <div
    className="c0"
    size={240}
    src="https://picsum.photos/512?image=0"
  />
</div>
`;

exports[`Storyshots Image thumbnail (large) 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 72px;
  min-height: 72px;
  width: 72px;
  height: 72px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div>
  <div
    className="c0"
    size={72}
    src="https://picsum.photos/512?image=0"
  />
</div>
`;

exports[`Storyshots Image thumbnail (medium) 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 48px;
  min-height: 48px;
  width: 48px;
  height: 48px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div>
  <div
    className="c0"
    size={48}
    src="https://picsum.photos/512?image=0"
  />
</div>
`;

exports[`Storyshots Image thumbnail (small) 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div>
  <div
    className="c0"
    size={40}
    src="https://picsum.photos/512?image=0"
  />
</div>
`;

exports[`Storyshots Image thumbnail 1`] = `
.c0 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 48px;
  min-height: 48px;
  width: 48px;
  height: 48px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/512?image=0);
  background-size: cover;
  background-position: center;
}

<div
  className="c0"
  size={48}
  src="https://picsum.photos/512?image=0"
/>
`;
